// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressSummary should format address according to rules 1`] = `
<div
  className="address-summary"
>
  <span>
    <span
      className="street"
    >
      Av. Praia de Botafogo
    </span>
  </span>
  <span>
    <span
      className="number-delimiter"
    >
       
    </span>
    <span
      className="number"
    >
      300
    </span>
  </span>
  <span>
    <span
      className="complement-delimiter"
    >
      , 
    </span>
    <span
      className="complement"
    >
      ap. 322
    </span>
  </span>
  <br />
  <span>
    <span
      className="neighborhood"
    >
      Botafogo
    </span>
  </span>
  <span>
    <span
      className="city-delimiter"
    >
       - 
    </span>
    <span
      className="city"
    >
      Rio de Janeiro
    </span>
  </span>
  <span>
    <span
      className="state-delimiter"
    >
       - 
    </span>
    <span
      className="state"
    >
      RJ
    </span>
  </span>
  <br />
  <span
    className="country"
  >
    BRA
  </span>
</div>
`;

exports[`AddressSummary should format address according to rules 2`] = `
<div
  className="address-summary"
>
  <span>
    <span
      className="street"
    >
      1 Infinite Loop
    </span>
  </span>
  <span>
    <span
      className="complement-delimiter"
    >
      , 
    </span>
    <span
      className="complement"
    >
      Suite 306
    </span>
  </span>
  <br />
  <span>
    <span
      className="city"
    >
      Cupertino
    </span>
  </span>
  <span>
    <span
      className="state-delimiter"
    >
      , 
    </span>
    <span
      className="state"
    >
      CA
    </span>
  </span>
  <br />
  <span
    className="country"
  >
    USA
  </span>
</div>
`;

exports[`AddressSummary should render gift list address 1`] = `
<span>
  <span>
    At address of:
  </span>
   
  <strong
    className="gift-list-name"
  >
    João da Silva
  </strong>
</span>
`;

exports[`AddressSummary should render using default if rules do not contain summary 1`] = `
<div
  className="address-summary"
>
  <span>
    <span
      className="street"
    >
      1 Hacker Way
    </span>
  </span>
  <span>
    <span
      className="complement-delimiter"
    >
      , 
    </span>
    <span
      className="complement"
    >
      2nd floor
    </span>
  </span>
  <br />
  <span>
    <span
      className="city"
    >
      Menlo Park
    </span>
  </span>
  <span>
    <span
      className="state-delimiter"
    >
       - 
    </span>
    <span
      className="state"
    >
      CA
    </span>
  </span>
  <br />
  <span>
    <span
      className="postalCode"
    >
      94025
    </span>
  </span>
</div>
`;
